# agentseal

./: .gitignore  PROBES.md  README.md
agentseal/.github/workflows/: js.yml
agentseal/js/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
agentseal/js/src/: compare.ts  constants.ts  errors.ts  fingerprint.ts  index.ts  remediation.ts  scoring.ts  types.ts  validator.ts
agentseal/js/src/detection/: canary.ts  fusion.ts  index.ts  ngram.ts  refusal.ts  semantic.ts
agentseal/js/src/mutations/: base64-wrap.ts  case-scramble.ts  generate.ts  index.ts  leetspeak.ts  prefix-padding.ts  reverse-embed.ts  rot13-wrap.ts  unicode-homoglyphs.ts  zero-width-inject.ts
agentseal/js/src/probes/: base.ts  extraction.ts  index.ts  injection.ts
agentseal/js/test/: edge-cases.test.ts  fingerprint.test.ts  integration.test.ts  parity.test.ts  remediation.test.ts  scoring.test.ts  setup.ts  validator.test.ts
js/: README.md  package.json
js/src/: baselines.ts  blocklist.ts  chains.ts  deobfuscate.ts  fix.ts  guard-models.ts  guard.ts  index.ts  llm-judge.ts  machine-discovery.ts  mcp-checker.ts  notify.ts  profiles.ts  shield.ts  skill-scanner.ts  toxic-flows.ts
js/src/probes/: index.ts  loader.ts
js/test/: baselines.test.ts  blocklist.test.ts  chains.test.ts  deobfuscate.test.ts  fix.test.ts  guard-models.test.ts  guard.test.ts  llm-judge.test.ts  machine-discovery.test.ts  mcp-checker.test.ts  notify.test.ts  probe-loader.test.ts  profiles.test.ts  shield.test.ts  skill-scanner.test.ts  toxic-flows.test.ts
python/: README.md  pyproject.toml
python/agentseal/: __init__.py  baselines.py  cli.py  guard.py  guard_models.py  notify.py  shield.py  toxic_flows.py  validator.py
python/tests/: test_baselines.py  test_imports.py  test_notify.py  test_shield.py  test_toxic_flows.py
(+16 files in other folders)
